--- a/Index.html
+++ b/Index.html
@@ -11,23 +11,35 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container" style="background: red;">
-    <div class="row">
-    <div class="col - sm">
-       one of tgree columns
-    </div>
-    <div class="col - sm">
-      one of tgree columns
-    </div>
-    <div class="col - sm">
-      one of tgree columns
-    </div>
-        <div class="col - sm">
+    <style>
+    .col {
+      border: 1px solid blue;
+    }
+
+  </style>
+    <div class="container" style="background-color: red;">
+      <!-- Content here --><!--<h1>Hello, world!</h1>-->
+      <div class="row">
+        <div class="col">
+          1 of 2
+        </div>
+        <div class="col">
+          2 of 2
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          1 of 3
+        </div>
+        <div class="col">
+          2 of 3
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
       </div>
     </div>
-  </div>
-</body>
-    <h1>Hello, world!</h1>
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
