--- a/Index.html
+++ b/Index.html
@@ -21,13 +21,19 @@
       <!-- Content here --><!--<h1>Hello, world!</h1>-->
       <div class="row">
         <div class="col-3">
-          1 of 2
+          1 
         </div>
         <div class="col-10">
-          2 of 2
+          2 
         </div>
-      </div>
-    
+
+        <div class="col-5">
+          3
+        </div>
+        <div class="col-8">
+          4
+        </div>
+
     
 
     <!-- Optional JavaScript; choose one of the two! -->
