--- a/Index.html
+++ b/Index.html
@@ -20,19 +20,16 @@
     <div class="container" style="background-color: red;">
       <!-- Content here --><!--<h1>Hello, world!</h1>-->
       <div class="row">
-        <div class="col-3">
+        <div class="col-12 col -lg-3" style="background: blue;">
           1 
         </div>
-        <div class="col-10">
+        <div class="col-12 col -lg-9" style="background: yellow;">
           2 
         </div>
+      </div>
+    </div>
 
-        <div class="col-5">
-          3
-        </div>
-        <div class="col-8">
-          4
-        </div>
+
 
     
 
