--- a/Platzi_bootstrap.html
+++ b/Platzi_bootstrap.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="#">Conviertete en orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Comprar tickets</a>
+            <a class="nav-link text-platzi"href="#">Comprar tickets</a>
           </li>
         </ul>
       </div>
