altura max img carousel

--- a/Platzi_bootstrap.html
+++ b/Platzi_bootstrap.html
@@ -47,6 +47,7 @@
     </nav>
     <!--/header-->
     <!--main-->
+    <main id="main">
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -68,6 +69,7 @@
         <span class="sr-only">Next</span>
       </button>
     </div>
+  </main>  
     <!--main-->
     <!--carousel-->
 
