supresion del button en el carousel+fluid carousel

--- a/Platzi_bootstrap.html
+++ b/Platzi_bootstrap.html
@@ -48,7 +48,7 @@
     <!--/header-->
     <!--main-->
     <main id="main">
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assest/images/paisaje1.jpg" class="d-block w-100" alt="paisaje1">
@@ -60,14 +60,6 @@
           <img src="assest/images/paisaje3.jpg" class="d-block w-100" alt="paisaje3">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </button>
     </div>
   </main>  
     <!--main-->
