--- a/Platzi_bootstrap.html
+++ b/Platzi_bootstrap.html
@@ -48,7 +48,7 @@
     <!--/header-->
     <!--main-->
     <main id="main">
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+    <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assest/images/paisaje1.jpg" class="d-block w-100" alt="paisaje1">
@@ -58,6 +58,15 @@
         </div>
         <div class="carousel-item">
           <img src="assest/images/paisaje3.jpg" class="d-block w-100" alt="paisaje3">
+        </div>
+        <div class="overlay">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+              <h1>Platzi Conf Hawaii</h1>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
