--- a/Platzi_bootstrap.html
+++ b/Platzi_bootstrap.html
@@ -48,7 +48,7 @@
     <!--/header-->
     <!--main-->
     <main id="main">
-    <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+    <div id="carousel" class="carousel slide" data-ride="carousel" data-pause="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assest/images/paisaje1.jpg" class="d-block w-100" alt="paisaje1">
@@ -62,8 +62,19 @@
         <div class="overlay">
           <div class="container">
             <div class="row">
-              <div class="col">
+              <div class="col-md-6 offset-md-6 text-center text-md-right">
               <h1>Platzi Conf Hawaii</h1>
+              <p class="d-none d-md-block">
+                Platzi conf llega por primera vez a hawaii, 
+                Un evento para compartir con nuestra comunidad, 
+                el conocimiento y experiencia de los expertos que estan 
+                creando el futuro del interne. Ven a conocer a 
+                miembros del Team Platzi, a otros estudiantes de 
+                Platzi y a los oradores de primer nivel que tenemos 
+                para ti. Te esperamos!
+              </p>
+              <a href="#">Quiero ser orador</a>
+              <button type="button">Comprar tickets</button>
               </div>
             </div>
           </div>
