manipulacion html desde js

--- a/20230830-1.html
+++ b/20230830-1.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA_Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> </title>
+    <title> manipulacion de DOM basica - Curso Practico de JavaScript </title>
 </head>
 <body>
     <h1> manipulacion del DOM básica</h1>
 
     <p> esto es un parrafo</p>
-    <p calss="parrafitp">esto es un parrafo con clase</p>
+    <p calss="parrafito">esto es un parrafo con clase</p>
     <p id="pid">esto es un parrafo con ID</p>
 
     <input placeholder="Escribe algo aqui"/>
