lectura de atributo en js

--- a/20230830-1.html
+++ b/20230830-1.html
@@ -7,10 +7,10 @@
     <title> manipulacion de DOM basica - Curso Practico de JavaScript </title>
 </head>
 <body>
-    <h1> manipulacion del DOM básica</h1>
+    <h1 pantalla='platzig'> manipulacion del DOM básica</h1>
 
     <p> esto es un parrafo</p>
-    <p calss="parrafito">esto es un parrafo con clase</p>
+    <p class="parrafito">esto es un parrafo con clase</p>
     <p id="pid">esto es un parrafo con ID</p>
 
     <input placeholder="Escribe algo aqui"/>
