--- a/20230830-1.html
+++ b/20230830-1.html
@@ -7,7 +7,7 @@
     <title> manipulacion de DOM basica - Curso Practico de JavaScript </title>
 </head>
 <body>
-    <h1 pantalla='platzig'> manipulacion del DOM básica</h1>
+    <h1 class='rojo'> manipulacion del DOM básica</h1>
 
     <p> esto es un parrafo</p>
     <p class="parrafito">esto es un parrafo con clase</p>
