--- a/20230830-1.html
+++ b/20230830-1.html
@@ -9,12 +9,15 @@
 <body>
     <h1 class='rojo'> manipulacion del DOM básica</h1>
 
-    <p> esto es un parrafo</p>
-    <p class="parrafito">esto es un parrafo con clase</p>
-    <p id="pid">esto es un parrafo con ID</p>
-
-    <input placeholder="Escribe algo aqui"/>
+    <form id="form">
+    <input id="calculo1" placeholder="escribe algo aqui"/>
+    <input id="calculo2" placeholder="escribe algo aqui"/>
+    <button id="btnCalcular">calcular</button>
     
+    
+    <p id="result"></p>
+    </form>
+
     <script src="./20230830_Script.js"></script>
 </body>
 </html>
